# gpu-x

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: CompileFlags.cmake  CxxStandard.cmake  InSourceGuard.cmake  InstallTargets.cmake  MSVCHotReload.cmake  StaticAnalysis.cmake
include/gpux/: runtime.h
include/gpux/internal/: definitions.h
include/gpux/utility/: buffer.h
src/amd/: amd_runtime.cc
